[package]
name = "stream_lang"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
eframe = { version = "0.30.0", features = ["serde"] }
egui = { version = "0.30.0", features = ["rayon"] }
petgraph = { version = "0.6.5", features = ["rayon", "serde", "serde_derive"] }
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
